feat: add error handling event and Discord notification for DNS record changes