@@ -6,10 +6,11 @@ import com.callv2.dns.manager.domain.record.IpType;
 
 public class IpTypeMismatchException extends DomainException {
 
-    private static final String MESSAGE = "IP type mismatch. Expected %s but got %s";
+    private static final String MESSAGE = "IP type mismatch.";
 
     private IpTypeMismatchException(final IpType expected, final IpType actual) {
-        super(String.format(MESSAGE, expected, actual), List.of());
+        super(String.format(MESSAGE, expected, actual),
+                List.of(DomainException.Error.with("Expected %s but got %s".formatted(expected, actual))));
     }
 
     public static IpTypeMismatchException with(final IpType expected, final IpType actual) {
